# hw

DSA_Template/: Makefile  README.md  main  main.c
DSA_Template/include/: darray.h  dlist.h  slist.h  status.h
DSA_Template/src/: darray.c  dlist.c  slist.c
DSA_Template/tests/: tests.h
DSA_Template/tests/src/: tests_darray.c  tests_dlist.c  tests_hello_world.c  tests_slist.c
bash/: script.sh
complex_linux_hw/: Makefile  README.md
complex_linux_hw/task1/: calculator  main.c
complex_linux_hw/task1/lib/: add.c  calc.h  div.c  factorial.c  mul.c  sqrt.c  sub.c
complex_linux_hw/task2/: converter  main.c
complex_linux_hw/task2/lib/: convert.h  lower.c  (+1 more)
dns_relosver/: Makefile  resolver.c
docker/: Dockerfile  README.md  client.sh  server.sh
endianness/: main.c
git_home_work/: main.c
gnu_hw/: README.md
gnu_hw/Make_task1/: Makefile_1  Makefile_2  Makefile_3  main.c  sum.h
gnu_hw/Make_task2/: Makefile  main.c  make1.mk  make2.mk  make3.mk  src.h  src1.c  src2.c  src3.c
hashing_table/: Makefile  README.md  main.c
hashing_table/include/: hash_table.h  status.h
hashing_table/src/: hash_table.c
linux_hw/dir1/: file2
linux_network_hw/: README.md  topology.sh
make/: Makefile.am  README.md  configure.ac  hello_func.c  hello_make.h  hello_world.c
netlink/: main  main.c
ping_implementation/: Makefile  README.md  ping  ping.c
python_script/: main.py
sockets/: client.c
web_server/: Makefile  README.md  index.html  main.c  server.c  server.conf  server.h
web_server/src/: main.c  server.c  server.h
web_server/tests/: test_server.py
(+1 files in other folders)
